docs/version-1.8/modules/en/pages/upgrades/longhorn-components/auto-upgrade-engine.adoc
= Automatically Upgrade the Longhorn Engine
:revdate: 2026-01-08
:page-revdate: {revdate}
:current-version: {page-component-version}

{longhorn-product-name} allows you to automatically upgrade Longhorn volumes to the new default engine version after upgrading Longhorn Manager. This feature reduces the amount of manual work you have to do when upgrading {longhorn-product-name}. There are a few concepts related to this feature as listed below:

== 1. Concurrent Automatic Engine Upgrade Per Node Limit Setting

This is a setting that controls how {longhorn-product-name} automatically upgrades volumes' engines to the new default engine image after upgrading Longhorn manager. The value of this setting specifies the maximum number of engines per node that are allowed to upgrade to the default engine image at the same time.

If the value is 0, {longhorn-product-name} will not automatically upgrade volumes' engines to the default version. The bigger this value is, the faster the engine upgrade process finishes.

However, giving a bigger value for this setting will consume more CPU and memory of the node during the engine upgrade process. We recommend setting the value to 3 to leave some room for error but don't overwhelm the system with too many failed upgrades.

== 2. The behavior of {longhorn-product-name} with different volume conditions.

In the following cases, assume that the `concurrent automatic engine upgrade per node limit` setting is bigger than 0.

. Attached Volumes
+
If the volume is in attached state and healthy, {longhorn-product-name} will automatically do a live upgrade for the volume's engine to the new default engine image.

. Detached Volumes
+
{longhorn-product-name} automatically does an offline upgrade for detached volume.

. Disaster Recovery Volumes
+
{longhorn-product-name} does not automatically upgrade xref:data-integrity-recovery/disaster-recovery-volumes.adoc[disaster recovery volumes] to the new default engine image because it would trigger a full restoration for the disaster recovery volumes. The full restoration might affect the performance of other running Longhorn volumes in the system. So, {longhorn-product-name} leaves it to you to decide when it is the good time to manually upgrade the engine for disaster recovery volumes (for example, when the system is idle or during the maintenance time).
+
However, when you activate the disaster recovery volume, it will be activated and then detached.
At this time, {longhorn-product-name} will automatically do offline upgrade for the volume similar to the detached volume case.

== 3. What Happened If The Upgrade Fails?

If a volume's engine fails to upgrade, the volume's status will not change. Because the status of the engine image will remain different from the spec, {longhorn-product-name} will retry the upgrade until it succeeds.

If there are too many volumes that fail to upgrade per node (i.e., more than the `concurrent automatic engine upgrade per node limit` setting), {longhorn-product-name} will stop upgrading volumes on that node.
